--- a/ConventionTemplate/App.xaml
+++ b/ConventionTemplate/App.xaml
@@ -1,6 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ConventionTemplate.App">
 	<Application.Resources>
-		<!-- Application resource dictionary -->
+		<ResourceDictionary>
+            <Style TargetType="NavigationPage">
+                 <Setter Property="BarBackgroundColor" Value="#1e1e1e"/>
+                 <Setter Property="BarTextColor" Value="Color.White"/>
+            </Style>
+        </ResourceDictionary>
 	</Application.Resources>
 </Application>
